# deepbiosphere

./: .gitignore  DGBIF.R  EEBIO.py  LICENSE  README  README.md  check_files.py  create_joint_obs.sh  download_data.sh  ex.downloadimage.py  pyproject.toml  setup.cfg  setup.py
.devcontainer/: DEVELOPING.md  dev.Dockerfile  devcontainer.json  environment.yml  example.env
GeoCELF2020/: species_metadata.csv
GeoCELF2020/occurrences/: dataset_means.json  occurrences_fr_test.csv  occurrences_us_test.csv  species_metadata.csv
GeoCELF2020/patches_fr/: french_files.txt
GeoCELF2020/patches_us/: us_files.txt
GeoCELF2020/us_shapefiles/: bigcali.geojson
deepbiosphere/scripts/: GEOCELF_CNN.py  GEOCELF_Dataset.py  GEOCELF_dataloader.py  GEOCELF_us_cnn_train.py  GEOCELF_us_cnn_train_Cali.py  GEOCELF_us_cnn_train_dataloader.py  GEOCELF_us_cnn_train_full.py  GEOCELF_us_cnn_train_full_nofam.py  GEOCELF_us_cnn_train_joint.py  GEOCELF_us_cnn_train_joint_nofam.py  GEOCELF_us_cnn_train_serialized.py  GEOCLEF_CNN.py  (+30 more)
docs/: DOCS.txt
gbif/: .Rhistory  parsetoy.R  plotgbif.R  plotgbif.py  ptoy.csv  subtoy.sh
sat/: plot_image_dots.R  viewimage.R
scripts/: 0toydownload.py  1toyfc.py  DEEPBIO_CNN.py  DEEPBIO_EE.py  DEEPBIO_FC.py  DEEPBIO_GBIF.py  DEEPBIO_UTILS.py  DEEPUTILS.py  EEBIO.py  GBIF.py  _cnn.py  _download.py  _fc.py  _gbiftensor.py  _net.py  _svm.py  cnn_cfar10_tutorial.py  download_sat.py  fc_neural_networks_tutorial.py  plotgbif.py  pytorchtut.py  rplotgbif.R
setupEE/: activatedeactivateEE.txt  installpythonearthengineapi.sh  startworkspacedocker.sh
src/: setup.py
(+23 files in other folders)
