[metadata]
name = deepbiosphere
description = A Python project for training convolutional neural network-based species distribution models using remote sensing data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/moiexpositoalonsolab/deepbiosphere
author = Lauren Gillespie
author_email = gillespl@cs.stanford.edu
license = MIT
license_files = LICENSE
classifiers = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Environment :: GPU :: NVIDIA CUDA
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
	Topic :: Scientific/Engineering :: Artificial Intelligence
	Intended Audience :: Science/Research
project_urls = 
    Documentation = https://deepbiosphere.readthedocs.io
    Source = https://github.com/moiexpositoalonsolab/deepbiosphere
    Tracker = https://github.com/moiexpositoalonsolab/deepbiosphere/issues
version=  0.2
readme= README.md
[options]
zip_safe = False
python_requires = >=3.6
install_requires = 
	inplace-abn
	numpy
	tensorboard
	jupyter
	descartes
	matplotlib
	pandas
	tqdm
    torchvision
	shapely
	rasterio
	geopandas 
	scikit-learn
	seaborn
	tqdm
	rpy2 
	requests
	scipy
	pygeos 
	pyproj
# include_package_data = True for putting non-.py files in package
pacakge_dir=
	=src
packages=find:
[options.packages.find]
where=src
